--- a/java-client/pom.xml
+++ b/java-client/pom.xml
@@ -4,11 +4,17 @@
 
     <groupId>com.bolour.boardgame</groupId>
     <artifactId>java-client</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Java Client API for Board Game</name>
 
+    <scm>
+      <url>https://github.com/azadbolour/boardgame</url>
+      <connection>scm:git:git://github.com/azadbolour/boardgame.git</connection>
+      <developerConnection>scm:git://github.com/azadbolour/boardgame.git</developerConnection>
+    </scm>
+ 
     <properties>
         <java.version>1.8</java.version>
         <junit.version>4.12</junit.version>
@@ -35,7 +41,7 @@
         <dependency>
         <groupId>com.bolour.util</groupId>
         <artifactId>util</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1-SNAPSHOT</version>
       </dependency>
 
     </dependencies>
