--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -27,7 +27,9 @@
     "webpack-dev-server": "^2.6.1",
     "clean-webpack-plugin":"^0.1.16",
     "jest": "*",
-    "json-loader": "*"
+    "json-loader": "*",
+    "css-loader": "*",
+    "style-loader": "*"
   },
   "dependencies": {
     "basic-authorization-header": "^0.2.7",
@@ -39,6 +41,7 @@
     "node-fetch": "*",
     "react-addons-test-utils": "^15.4.0",
     "react-dnd-test-backend": "^2.4.0",
+    "react-bootstrap-table": "*",
     "valid-url": "*"
   }
 }
