--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -240,6 +240,7 @@ test-suite infocus
       BoardGame.Server.Domain.IndexedDictionarySpec
       BoardGame.Server.Domain.DictionaryCacheSpec
       BoardGame.Server.Service.GameServiceSpec
+      BoardGame.Server.Domain.ServerParametersSpec
   default-language: Haskell2010
 
 executable uuid
