--- a/haskell-server/config.yml.template
+++ b/haskell-server/config.yml.template
@@ -8,11 +8,17 @@ deployEnv: Dev
 # The port on which the server listens for API calls.
 serverPort: 6587
 
-# The database user.
-dbUser: postgres
-
-# The database password. TODO. Security for db password.
-dbPassword: postgres
+dbConfig:
+  # Type of database system.
+  dbmsType: Postgres
+  # The database server host.
+  dbHost: localHost
+  # The database server port.
+  dbPort: 5432
+  # The database user.
+  dbUser: postgrestest
+  # The database password. TODO. Security for db password.
+  dbPassword: postgrestest
 
 # Maximum number of active game.
 maxActiveGames: 100
@@ -22,4 +28,4 @@ maxGameMinutes: 30
 
 # Path to the dictionary directory.
 # Defaults to the data directory of the Haskell application is used.
-# dictionaryDir:
+dictionaryDir: 'dict'
