--- a/haskell-server/test-data/test-config.yml
+++ b/haskell-server/test-data/test-config.yml
@@ -15,6 +15,8 @@ dbConfig:
   dbHost: localHost
   # The database server port.
   dbPort: 5432
+  # The database name.
+  dbName: postgres
   # The database user.
   dbUser: postgres
   # The database password. TODO. Security for db password.
