--- a/docker/Dockerfile.boardgame
+++ b/docker/Dockerfile.boardgame
@@ -6,7 +6,7 @@
 #
 # Begin with latest base.
 #
-FROM azadbolour/boardgame-base
+FROM azadbolour/boardgame-base-v0.2
 
 #
 # Set up the base environment.
