--- a/branch.sh.template
+++ b/branch.sh.template
@@ -11,26 +11,37 @@ myname=boardgame
 export WORKSPACE="$HOME/dev/bolour/main/${myname}/master"
 echo "WORKSPACE=$WORKSPACE"
 
+echo "..."
+
 export JAVA_HOME=$(/usr/libexec/java_home)
 echo "JAVA_HOME=$JAVA_HOME"
+
+postgres_home=/Applications/Postgres93.app/Contents/MacOS
 
 export M2_HOME=$HOME/software/mvn/apache-maven-3.2.2
 export M2=$M2_HOME/bin
 
-echo "..."
+NPM_PACKAGES=${HOME}/software/npm/packages
+NODE_PATH="$NPM_PACKAGES/lib/node_modules:$NODE_PATH"
 
-# For Ubuntu.
-base_path="/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+MY_LOCAL=$HOME/.local
+LOCAL_GIT=/usr/local/git
 
-# For MAC OS/X.
-# base_path="/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/git/bin"
-
+base_path="/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:$HOME/bin"
 echo "base_path=$base_path"
-export PATH="$JAVA_HOME/bin:$M2:$base_path:."
+export PATH="$LOCAL_GIT/bin:$NPM_PACKAGES/bin:$MY_LOCAL/bin:$postgres_home/bin:$JAVA_HOME/bin:$WORKSPACE/script:$M2:$base_path:."
 echo "PATH=$PATH"
 
 alias be='. branch.sh' # branch environment
 alias workspace="cd $WORKSPACE"
+
+idea () { 
+    open -a /Applications/IntelliJ\ IDEA.app/ $WORKSPACE/$1; 
+}
+export -f idea
+
+alias sb='stack build'
+alias repl='stack repl'
 
 alias pq='psql -U postgres -h 127.0.0.1'
 
