--- a/java-client/pom.xml
+++ b/java-client/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
         <groupId>com.bolour.util</groupId>
         <artifactId>util</artifactId>
-        <version>0.1-SNAPSHOT</version>
+        <version>0.2</version>
       </dependency>
 
     </dependencies>
