--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.bolour.boardgame</groupId>
     <artifactId>benchmark</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.2</version>
     <packaging>jar</packaging>
 
     <name>Board Game Benchmark</name>
@@ -18,7 +18,7 @@
         <dependency>
           <groupId>com.bolour.boardgame</groupId>
           <artifactId>java-client</artifactId>
-          <version>0.1-SNAPSHOT</version>
+          <version>0.2</version>
         </dependency>
 
         <dependency>
