--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.bolour.boardgame</groupId>
     <artifactId>benchmark</artifactId>
-    <version>0.2</version>
+    <version>0.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Board Game Benchmark</name>
