--- a/java-client/pom.xml
+++ b/java-client/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.bolour.boardgame</groupId>
     <artifactId>java-client</artifactId>
-    <version>0.2</version>
+    <version>0.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Java Client API for Board Game</name>
