--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -64,8 +64,10 @@ library
       BoardGame.Common.Domain.Point
       BoardGame.Common.Domain.GridValue
       BoardGame.Common.Domain.GridPiece
+      BoardGame.Common.Domain.PieceGeneratorType
       BoardGame.Common.Domain.GameParams
       BoardGame.Common.Message.GameDto
+      BoardGame.Common.Message.StartGameRequest
       BoardGame.Common.Domain.PlayPiece
       BoardGame.Server.Domain.Grid
       BoardGame.Server.Domain.Core
@@ -77,8 +79,7 @@ library
       BoardGame.Server.Domain.Tray
       BoardGame.Server.Domain.PlayInfo
       BoardGame.Server.Domain.PlayDetails
-      BoardGame.Server.Domain.PieceGenerator
-      BoardGame.Server.Domain.RandomPieceGenerator
+      BoardGame.Server.Domain.PieceGen
       BoardGame.Server.Domain.BoardStripMatcher
       BoardGame.Server.Domain.IndexedStripMatcher
       BoardGame.Server.Domain.IndexedLanguageDictionary
