--- a/scala-server/conf/application.conf
+++ b/scala-server/conf/application.conf
@@ -57,6 +57,12 @@ akka {
   #log-config-on-start = true
 }
 
+
+# play.assets {
+#  path = /public
+#  urlPrefix = "/assets"
+# }
+
 ## Secret key
 # http://www.playframework.com/documentation/latest/ApplicationSecret
 # ~~~~~
@@ -125,6 +131,9 @@ play.filters {
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
+
+  disabled += play.filters.csrf.CSRFFilter
+
 }
 
 ## Play HTTP settings
@@ -255,6 +264,7 @@ play.filters {
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   # enabled += filters.ExampleFilter
+  enabled += play.filters.cors.CORSFilter
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
@@ -279,7 +289,7 @@ play.filters {
     #pathPrefixes = ["/some/path", ...]
 
     # The allowed origins. If null, all origins are allowed.
-    #allowedOrigins = ["http://www.example.com"]
+    allowedOrigins = ["http://localhost:3000"]
 
     # The allowed HTTP methods. If null, all methods are allowed
     #allowedHttpMethods = ["GET", "POST"]
