--- a/scala-server/conf/application.conf
+++ b/scala-server/conf/application.conf
@@ -15,8 +15,7 @@ service {
 }
 
 play.http.secret.key = pleasechangeme
-
-
+play.modules.enabled += "com.bolour.boardgame.scala.server.service.GameHarvesterModule"
 
 
 
@@ -80,7 +79,7 @@ akka {
 #
 # You can also extend Play functionality by using one of the publically available
 # Play modules: https://playframework.com/documentation/latest/ModuleDirectory
-play.modules {
+# play.modules {
   # By default, Play will load any class called Module that is defined
   # in the root package (the "app" directory), or you can define them
   # explicitly below.
@@ -89,7 +88,7 @@ play.modules {
 
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
-}
+# }
 
 ## IDE
 # https://www.playframework.com/documentation/latest/IDE
