--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -14,15 +14,15 @@
     "game"
   ],
   "devDependencies": {
-    "babel-core": "^6.0.20",
+    "babel-core": "^6.7.6",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-env": "1.6.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.15",
-    "eslint": "^3.14.0",
-    "eslint-plugin-react": "^6.9.0",
-    "react-hot-loader": "^1.3.0",
+    "eslint": "^4.7.2",
+    "eslint-plugin-react": "^7.4.0",
+    "react-hot-loader": "3.1.3",
     "webpack": "^2.7.0",
     "webpack-dev-server": "^2.6.1",
     "clean-webpack-plugin":"^0.1.16",
@@ -31,14 +31,13 @@
   },
   "dependencies": {
     "basic-authorization-header": "^0.2.7",
-    "react": "^15.4.2",
-    "react-dnd": "^2.4.0",
-    "react-dnd-html5-backend": "^2.4.0",
-    "react-dom": "^15.4.2",
+    "react": "^16.2.0",
+    "prop-types": "^16.2.0",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.2.0",
+    "react-dom": "^16.2.0",
     "flux": "^3.1.2",
     "node-fetch": "*",
-    "react-addons-test-utils": "^15.4.0",
-    "react-dnd-test-backend": "^2.4.0",
     "react-list": "*",
     "valid-url": "*"
   }
