refactor Haskell PieceGen to TileSack

--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -72,7 +72,7 @@ library
       BoardGame.Common.Message.MachinePlayResponse
       BoardGame.Common.Message.SwapPieceResponse
       BoardGame.Common.Domain.PlayPiece
-      BoardGame.Common.Domain.PieceGen
+      BoardGame.Common.Domain.TileSack
       BoardGame.Common.Domain.ScoreMultiplierType
       BoardGame.Common.Domain.ScoreMultiplier
       BoardGame.Common.Domain.StopInfo
