converted game to get tiles from real tile sack

--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -253,6 +253,7 @@ test-suite spec
       BoardGame.Server.Domain.IndexedDictionarySpec
       BoardGame.Server.Domain.DictionaryCacheSpec
       BoardGame.Server.Domain.ServerParametersSpec
+      BoardGame.Server.Domain.TileSackSpec
       BoardGame.Server.Service.BaseServiceFixtures
       BoardGame.Server.Service.ServiceTestFixtures
       BoardGame.Server.Service.GameServiceSpec
