--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -77,6 +77,7 @@ library
       BoardGame.Common.Domain.StopInfo
       BoardGame.Common.Domain.GameMiniState
       BoardGame.Common.Domain.GameSummary
+      BoardGame.Common.Domain.PointSymmetry
       BoardGame.Server.Domain.TileSack
       BoardGame.Server.Domain.Grid
       BoardGame.Server.Domain.Core
