--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -94,6 +94,8 @@ library
       BoardGame.Server.Domain.GameCache
       BoardGame.Server.Domain.GameEnv
       BoardGame.Server.Domain.DictionaryCache
+      BoardGame.Server.Domain.CrossWordFinder
+      BoardGame.Server.Domain.Scorer
       BoardGame.Server.Web.GameEndPoint
       BoardGame.Server.Web.Converters
       BoardGame.Server.Service.GameTransformerStack
