--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -257,6 +257,7 @@ test-suite spec
       BoardGame.Server.Domain.DictionaryCacheSpec
       BoardGame.Server.Domain.ServerParametersSpec
       BoardGame.Server.Domain.TileSackSpec
+      BoardGame.Server.Domain.CrossWordFinderSpec
       BoardGame.Server.Service.BaseServiceFixtures
       BoardGame.Server.Service.ServiceTestFixtures
       BoardGame.Server.Service.GameServiceSpec
@@ -294,6 +295,7 @@ test-suite infocus
       BoardGame.Server.Domain.DictionaryCacheSpec
       BoardGame.Server.Service.GameServiceSpec
       BoardGame.Server.Domain.ServerParametersSpec
+      BoardGame.Server.Domain.CrossWordFinderSpec
   default-language: Haskell2010
 
 executable uuid
@@ -309,5 +311,13 @@ executable ioref
   ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
   build-depends:
       base
+  default-language: Haskell2010
+
+executable temp-trial
+  main-is: trial/TempTrial.hs
+  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
+  build-depends:
+      base
+    , boardgame
   default-language: Haskell2010
 
