--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -79,6 +79,7 @@ library
       BoardGame.Common.Domain.GameSummary
       BoardGame.Common.Domain.PointSymmetry
       BoardGame.Common.Domain.Grid
+      BoardGame.Common.Domain.SwissCheeseGrid
       BoardGame.Server.Domain.TileSack
       BoardGame.Server.Domain.Core
       BoardGame.Server.Domain.Board
@@ -152,54 +153,54 @@ executable boardgame-server
     , mtl
   default-language: Haskell2010
 
-executable trial
-  main-is: app/DistributionTrial.hs
-  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
-  build-depends:
-      base
-    , wai
-    , wai-cors
-    , warp
-    , aeson
-    , here
-    , http-types
-    , bytestring
-    , boardgame
-    , containers
-  default-language: Haskell2010
+--executable trial
+--  main-is: app/DistributionTrial.hs
+--  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
+--  build-depends:
+--      base
+--    , wai
+--    , wai-cors
+--    , warp
+--    , aeson
+--    , here
+--    , http-types
+--    , bytestring
+--    , boardgame
+--    , containers
+--  default-language: Haskell2010
 
-executable sqlite-memory-trial
-  main-is: trial/SqliteTrial.hs
-  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
-  build-depends:
-      base
-    , wai
-    , aeson
-    , here
-    , http-types
-    , bytestring
-    , boardgame
-    , containers
-    , persistent
-    , persistent-template
-    , persistent-sqlite
-    , transformers
-  default-language: Haskell2010
+--executable sqlite-memory-trial
+--  main-is: trial/SqliteTrial.hs
+--  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
+--  build-depends:
+--      base
+--    , wai
+--    , aeson
+--    , here
+--    , http-types
+--    , bytestring
+--    , boardgame
+--    , containers
+--    , persistent
+--    , persistent-template
+--    , persistent-sqlite
+--    , transformers
+--  default-language: Haskell2010
 
-executable async-sample
-  main-is: trial/AsyncSample.hs
-  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
-  build-depends:
-      base
-    , async
-  default-language: Haskell2010
+--executable async-sample
+--  main-is: trial/AsyncSample.hs
+--  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
+--  build-depends:
+--      base
+--    , async
+--  default-language: Haskell2010
 
-executable mvar-sample
-  main-is: trial/MvarSample.hs
-  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
-  build-depends:
-      base
-  default-language: Haskell2010
+--executable mvar-sample
+--  main-is: trial/MvarSample.hs
+--  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
+--  build-depends:
+--      base
+--  default-language: Haskell2010
 
 test-suite spec
   type: exitcode-stdio-1.0
@@ -298,26 +299,26 @@ test-suite infocus
       BoardGame.Server.Domain.CrossWordFinderSpec
   default-language: Haskell2010
 
-executable uuid
-  main-is: trial/UUIDTrial.hs
-  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
-  build-depends:
-      base
-    , uuid
-  default-language: Haskell2010
-
-executable ioref
-  main-is: trial/IORefSample.hs
-  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
-  build-depends:
-      base
-  default-language: Haskell2010
-
-executable temp-trial
-  main-is: trial/TempTrial.hs
-  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
-  build-depends:
-      base
-    , boardgame
-  default-language: Haskell2010
-
+--executable uuid
+--  main-is: trial/UUIDTrial.hs
+--  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
+--  build-depends:
+--      base
+--    , uuid
+--  default-language: Haskell2010
+--
+--executable ioref
+--  main-is: trial/IORefSample.hs
+--  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
+--  build-depends:
+--      base
+--  default-language: Haskell2010
+--
+--executable temp-trial
+--  main-is: trial/TempTrial.hs
+--  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
+--  build-depends:
+--      base
+--    , boardgame
+--  default-language: Haskell2010
+--
