--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -83,6 +83,7 @@ library
       BoardGame.Server.Domain.TileSack
       BoardGame.Server.Domain.Core
       BoardGame.Server.Domain.Board
+      BoardGame.Server.Domain.SwissBoard
       BoardGame.Server.Domain.GameError
       BoardGame.Server.Domain.Game
       BoardGame.Server.Domain.Play
