--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -261,6 +261,7 @@ test-suite spec
       BoardGame.Server.Domain.TileSackSpec
       BoardGame.Server.Domain.CrossWordFinderSpec
       BoardGame.Server.Domain.ScorerSpec
+      BoardGame.Server.Domain.SwissCheeseGridSpec
       BoardGame.Server.Service.BaseServiceFixtures
       BoardGame.Server.Service.ServiceTestFixtures
       BoardGame.Server.Service.GameServiceSpec
@@ -299,6 +300,7 @@ test-suite infocus
       BoardGame.Server.Service.GameServiceSpec
       BoardGame.Server.Domain.ServerParametersSpec
       BoardGame.Server.Domain.CrossWordFinderSpec
+      BoardGame.Server.Domain.SwissCheeseGridSpec
   default-language: Haskell2010
 
 --executable uuid
