--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -80,7 +80,7 @@ library
       BoardGame.Common.Domain.GameSummary
       BoardGame.Common.Domain.PointSymmetry
       BoardGame.Common.Domain.Grid
-      BoardGame.Common.Domain.SwissCheeseGrid
+      BoardGame.Common.Domain.SparseGrid
       BoardGame.Server.Domain.TileSack
       BoardGame.Server.Domain.Core
       BoardGame.Server.Domain.Board
@@ -261,7 +261,7 @@ test-suite spec
       BoardGame.Server.Domain.TileSackSpec
       BoardGame.Server.Domain.CrossWordFinderSpec
       BoardGame.Server.Domain.ScorerSpec
-      BoardGame.Server.Domain.SwissCheeseGridSpec
+      BoardGame.Server.Domain.SparseGridSpec
       BoardGame.Server.Service.BaseServiceFixtures
       BoardGame.Server.Service.ServiceTestFixtures
       BoardGame.Server.Service.GameServiceSpec
@@ -300,7 +300,7 @@ test-suite infocus
       BoardGame.Server.Service.GameServiceSpec
       BoardGame.Server.Domain.ServerParametersSpec
       BoardGame.Server.Domain.CrossWordFinderSpec
-      BoardGame.Server.Domain.SwissCheeseGridSpec
+      BoardGame.Server.Domain.SparseGridSpec
   default-language: Haskell2010
 
 --executable uuid
