--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
           <groupId>com.bolour.boardgame</groupId>
           <artifactId>java-client</artifactId>
-          <version>0.2</version>
+          <version>0.5-SNAPSHOT</version>
         </dependency>
 
         <dependency>
