--- a/haskell-server/stack.yaml
+++ b/haskell-server/stack.yaml
@@ -1,6 +1,7 @@
 # resolver: ghc-7.10.3
 # resolver: nightly-2016-04-14
-resolver: lts-6.25  # for ghc 7.10.3
+resolver: lts-6.35  # for ghc 7.10.3
+# resolver: lts-10.3  # for ghc 8.2.2
 # resolver: lts-7.16 # GHC 8.0.1
 
 packages:
