--- a/scala-server/docker/Dockerfile.boardgame-scala-packager
+++ b/scala-server/docker/Dockerfile.boardgame-scala-packager
@@ -64,13 +64,22 @@ RUN cd web-ui && npm install
 #
 RUN cd web-ui && ./build-prod.sh
 
+# Note. On Jan 14 2018 sbt could not be authenticated, though the above is the documented manner
+# of installing sbt 1.x as per http://www.scala-sbt.org/1.x/docs/Installing-sbt-on-Linux.html.
+
 #
 # Install SBT
 #
-RUN echo "deb https://dl.bintray.com/sbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list \
-  && apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823 \
-  && apt-get update \
-  && apt-get install sbt
+# RUN echo "deb https://dl.bintray.com/sbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list \
+#  && apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823 \
+#  && apt-get update \
+#  && apt-get -y install sbt
+
+#
+# Install sbt from the official DEB package.
+#
+RUN wget --quiet https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb \
+    && dpkg -i sbt-1.1.0.deb
 
 #
 # Package the scala server
