--- a/haskell-server/docker/Dockerfile.boardgame-haskell-packager
+++ b/haskell-server/docker/Dockerfile.boardgame-haskell-packager
@@ -47,7 +47,8 @@ RUN dpkg -L libpq-dev
 # Install node js version 7.
 #
 RUN apt-get update
-RUN curl -sL https://raw.githubusercontent.com/nodesource/distributions/master/deb/setup_7.x | bash -
+RUN curl -sL https://deb.nodesource.com/setup_9.x | bash -
+# RUN curl -sL https://raw.githubusercontent.com/nodesource/distributions/master/deb/setup_7.x | bash -
 RUN apt-get update
 RUN apt-get install -y apt-utils
 RUN apt-get install -y nodejs
