--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -31,13 +31,14 @@
   },
   "dependencies": {
     "basic-authorization-header": "^0.2.7",
-    "react": "^16.2.0",
-    "prop-types": "^15.6.0",
-    "react-dnd": "^2.5.4",
-    "react-dnd-html5-backend": "^2.2.0",
-    "react-dom": "^16.2.0",
     "flux": "^3.1.2",
     "node-fetch": "*",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.2.0",
+    "react-dnd-touch-backend": "^0.3.20",
+    "react-dom": "^16.2.0",
     "react-list": "*",
     "valid-url": "*"
   }
