added BlackWhiteGrid for Haskell

--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -58,10 +58,12 @@ library
       Bolour.Util.WaiUtil
       Bolour.Util.FileUtil
       Bolour.Util.Empty
+      Bolour.Util.BlackWhite
       Bolour.Grid.Point
       Bolour.Grid.GridValue
       Bolour.Grid.Grid
       Bolour.Grid.SparseGrid
+      Bolour.Grid.BlackWhiteGrid
       BoardGame.Common.GameApi
       BoardGame.Server.Domain.ServerConfig
       BoardGame.Common.Domain.Player
