--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -59,10 +59,10 @@ library
       Bolour.Util.FileUtil
       Bolour.Util.Empty
       Bolour.Util.BlackWhite
-      Bolour.Grid.Point
-      Bolour.Grid.GridValue
-      Bolour.Grid.Grid
-      Bolour.Grid.BlackWhiteGrid
+      Bolour.Plane.Domain.Point
+      Bolour.Plane.Domain.GridValue
+      Bolour.Plane.Domain.Grid
+      Bolour.Plane.Domain.BlackWhiteGrid
       BoardGame.Common.GameApi
       BoardGame.Server.Domain.ServerConfig
       BoardGame.Common.Domain.Player
@@ -151,7 +151,7 @@ test-suite spec
     , logging-effect >= 1.1
     , containers
   other-modules:
-      Bolour.Grid.BlackWhiteGridSpec
+      Bolour.Plane.Domain.BlackWhiteGridSpec
       Bolour.Util.DataFileSpec
       Bolour.Util.SpecUtil
       BoardGame.Util.TestUtil
