--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -47,7 +47,8 @@ library
     , deepseq
     , yaml
   exposed-modules:
-      -- TODO. Separate out util, common, client, and server into different packages.
+      -- TODO. Separate out util, language, plane, and server into different packages.
+      Bolour.Util.Core
       Bolour.Util.Cache
       Bolour.Util.DbConfig
       Bolour.Util.PersistRunner
@@ -85,7 +86,6 @@ library
       BoardGame.Common.Domain.GameSummary
       BoardGame.Common.Domain.PointSymmetry
       BoardGame.Server.Domain.PieceProvider
-      BoardGame.Server.Domain.Core
       BoardGame.Server.Domain.Board
       BoardGame.Server.Domain.GameError
       BoardGame.Server.Domain.Game
