--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -62,6 +62,7 @@ library
       Bolour.Util.BlackWhite
       Bolour.Language.Util.WordUtil
       Bolour.Language.Domain.WordDictionary
+      Bolour.Language.Domain.DictionaryIO
       Bolour.Language.Domain.DictionaryCache
       Bolour.Plane.Domain.Point
       Bolour.Plane.Domain.Axis
@@ -166,7 +167,7 @@ test-suite spec
       BoardGame.Server.Domain.StripMatcherSpec
       BoardGame.Server.Domain.StripMatcherSpec2
       BoardGame.Server.Domain.WordDictionarySpec
-      BoardGame.Server.Domain.DictionaryCacheSpec
+      BoardGame.Server.Domain.DictionarySpec
       BoardGame.Server.Domain.ServerParametersSpec
       BoardGame.Server.Domain.CrossWordFinderSpec
       BoardGame.Server.Domain.ScorerSpec
@@ -206,7 +207,7 @@ test-suite infocus
       BoardGame.Server.Web.WebTestFixtures
       BoardGame.Server.Domain.StripMatcherSpec
       BoardGame.Server.Domain.WordDictionarySpec
-      BoardGame.Server.Domain.DictionaryCacheSpec
+      BoardGame.Server.Domain.DictionarySpec
       BoardGame.Server.Service.GameServiceSpec
       BoardGame.Server.Domain.ServerParametersSpec
       BoardGame.Server.Domain.CrossWordFinderSpec
@@ -262,23 +263,33 @@ executable boardgame-server
   default-language: Haskell2010
 
 executable trial
-  main-is: app/Trial.hs
+  main-is: trial/CatchTrial.hs
   ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
   build-depends:
       base
-    , wai
-    , wai-cors
-    , warp
-    , aeson
-    , here
-    , http-types
-    , bytestring
-    , boardgame
     , containers
     , transformers
     , mtl
     , logging-effect >= 1.1
   default-language: Haskell2010
+--executable trial
+--  main-is: app/Trial.hs
+--  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
+--  build-depends:
+--      base
+--    , wai
+--    , wai-cors
+--    , warp
+--    , aeson
+--    , here
+--    , http-types
+--    , bytestring
+--    , boardgame
+--    , containers
+--    , transformers
+--    , mtl
+--    , logging-effect >= 1.1
+--  default-language: Haskell2010
 
 --executable sqlite-memory-trial
 --  main-is: trial/SqliteTrial.hs
