--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -225,6 +225,15 @@ executable boardgame-database-migrator
     , boardgame
   default-language: Haskell2010
 
+executable masked-words-preprocessor
+  main-is: src/Bolour/Language/Service/MaskedWordsPreprocessor.hs
+  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
+  build-depends:
+      base
+    , containers
+    , boardgame
+  default-language: Haskell2010
+
 executable boardgame-seed-data-populator
   main-is: app/SeedDataPopulator.hs
   ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
