--- a/scala-server/docker/Dockerfile.boardgame-scala
+++ b/scala-server/docker/Dockerfile.boardgame-scala
@@ -8,7 +8,7 @@
 #
 
 # The docker tag.
-ARG tag=0.9
+ARG tag=0.9.1
 
 # The temp storage area for boardgame. Use for the play pid (lock) file.
 ARG BOARDGAME_VAR=/var/run/boardgame
@@ -38,7 +38,7 @@ RUN echo $PATH \
   && ls \
   && mkdir -p $BOARDGAME_VAR
 
-RUN git pull origin scala-dev
+RUN git pull origin master
 # RUN cd web-ui && ./build-prod.sh
 
 RUN cd scala-server \
